--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,5 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
