feat: add basic pages & routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div style="height: 100%">
+  <div class="flex gap-4 p-2">
+    <button class="p-2 bg-red-300 rounded" routerLink="/">home</button>
+    <button class="p-2 bg-red-300 rounded" routerLink="/course">course</button>
+    <button class="p-2 bg-red-300 rounded" routerLink="/user">user</button>
+    <button class="p-2 bg-red-300 rounded" routerLink="/timetable">timetable</button>
+    <button class="p-2 bg-red-300 rounded" routerLink="/404">404</button>
+  </div>
   <router-outlet></router-outlet>
 </div>
