feat: add assets file structure / common.scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+// Google fonts
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+// NCKUHUB 共用 scss
+@import "assets/css/common.scss";
