feat: setting router about 各種 component 切換

--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<div style="margin-top: 100px">
-    test
+<!--TODO: refacotr 往下的高度(寫成variable-->
+<div style="margin-top: 64px">
+    <router-outlet></router-outlet>
 </div>
