--- a/src/app/pages/course/navbar/navbar.component.html
+++ b/src/app/pages/course/navbar/navbar.component.html
@@ -2,13 +2,17 @@
     <div id="navbar" class="hub_navbar">
         <div class="hub_navbar__left_area">
             <a class="hub_navbar__logo" href="/"></a>
-            <input class="hub_navbar__search" type="text" placeholder="搜尋「課程名」或「教師名」" />
+            <input
+                class="hub_navbar__search"
+                type="text"
+                placeholder="搜尋「課程名」或「教師名」"
+            />
             <div class="hub_navbar__search__cancel"></div>
         </div>
         <div class="hub_navbar__right_area">
             <div>找課程</div>
             <div>排課表 <span class="wishlist_count"></span></div>
-            <img class="hub_navbar__profile">
+            <img class="hub_navbar__profile" />
         </div>
     </div>
 </nav>
