--- a/src/assets/scss/componentes/table.scss
+++ b/src/assets/scss/componentes/table.scss
@@ -1,7 +1,4 @@
-
-
-@import "src/assets/scss/import";
-
+@import 'src/assets/scss/import';
 
 .block_title {
     @include flex_center_left();
@@ -13,7 +10,7 @@
         &::after {
             position: absolute;
             display: inline-block;
-            content: "";
+            content: '';
             top: 50%;
             margin-left: 10px;
             height: 1px;
@@ -28,7 +25,7 @@
     border-bottom: $light_2 1px solid;
     width: 100%;
     height: 70px;
-    transition: .2s $material_trans;
+    transition: 0.2s $material_trans;
     background: white;
     &_left {
         @include inline_flex_center(row);
@@ -63,7 +60,7 @@
         font-weight: 100;
         background-color: $default;
         border-radius: 100%;
-        transition: background-color .1s $material_trans;
+        transition: background-color 0.1s $material_trans;
         &.A9 {
             background: $red;
         }
@@ -84,25 +81,26 @@
         @include flex_center(row);
         width: 32px;
         height: 32px;
-        background-image: url("../../images/table/icon_arrow_right.svg");
+        background-image: url('../../images/table/icon_arrow_right.svg');
         background-color: $light_2;
         background-size: 14px;
         background-repeat: no-repeat;
         background-position: center;
         border-radius: 100%;
-        transition: .2s $material_trans;
+        transition: 0.2s $material_trans;
     }
     &:hover {
         cursor: pointer;
         background-color: $light_1;
         .list_course_item_category.clickable {
-            background-image: url("../../images/table/icon_close.svg");
+            background-image: url('../../images/table/icon_close.svg');
             background-size: 16px;
             background-repeat: no-repeat;
             background-position: center;
             background-color: $gray;
-            color: rgba(0,0,0,0);
-            transition: background-color .2s $material_trans, background-size .2s $material_trans;
+            color: rgba(0, 0, 0, 0);
+            transition: background-color 0.2s $material_trans,
+                background-size 0.2s $material_trans;
             &:hover {
                 background-color: $warning_red;
                 background-size: 14px;
@@ -128,8 +126,6 @@
     }
 }
 
-
-
 // 佈局
 
 .left_area {
@@ -140,7 +136,7 @@
     bottom: 0;
     padding-left: 5vw;
     padding-right: 10px;
-    height: calc( 100vh - 60px );
+    height: calc(100vh - 60px);
     width: 30vw;
     // background: yellow;
 }
@@ -150,7 +146,7 @@
     right: 0;
     bottom: 0;
     width: 70vw;
-    height: calc( 100vh - 60px );
+    height: calc(100vh - 60px);
     padding-right: 5vw;
     padding-left: 30px;
     @include flex_center(column);
@@ -165,7 +161,7 @@
     height: 85px;
     width: 100%;
     // margin-top: 10vh;
-    margin-top: calc( 9vh - 30px );
+    margin-top: calc(9vh - 30px);
     padding: 0 15px;
     background: $white;
     border: $light_2 1px solid;
@@ -208,13 +204,13 @@
                 cursor: pointer;
                 background-image: none;
                 color: $deep_blue;
-                transition: .2s $material_trans;
+                transition: 0.2s $material_trans;
             }
             &:hover {
                 .quick_search_input {
                     color: $dark;
                     text-decoration: line-through;
-                    box-shadow: 0 0 14px 0 rgba(0,0,0,0.06);
+                    box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.06);
                 }
                 .quick_search_clear_filter {
                     background-color: $dark;
@@ -234,7 +230,7 @@
         padding: 16px 0;
         padding-left: 50px;
         padding-right: 15px;
-        background-image: url("../../images/table/icon_data.svg");
+        background-image: url('../../images/table/icon_data.svg');
         background-color: $white;
         background-repeat: no-repeat;
         background-position: 18px center;
@@ -248,7 +244,7 @@
         }
         &:focus {
             @include ellipsis();
-            box-shadow: 0 0 28px 0 rgba(0,0,0,0.1);
+            box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.1);
             outline: none;
         }
         &.locked {
@@ -257,14 +253,14 @@
             // cursor: not-allowed !important;
             cursor: default !important;
             &:hover {
-                box-shadow: 0 0 14px 0 rgba(0,0,0,0.06) !important;
+                box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.06) !important;
             }
             &:focus {
-                box-shadow: 0 0 14px 0 rgba(0,0,0,0.06) !important;
+                box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.06) !important;
             }
         }
     }
-    &_delete{
+    &_delete {
         display: none;
         position: absolute;
         left: 85%;
@@ -273,7 +269,7 @@
         width: 20px;
         height: 20px;
         background-color: #fff;
-        background-image: url("../../images/table/icon_delete.svg");
+        background-image: url('../../images/table/icon_delete.svg');
         // background-image: url("../../images/table/icon_cancel.svg");
     }
     &_clear_filter {
@@ -286,21 +282,21 @@
         left: 0;
         margin-left: 20px;
         border-radius: 100%;
-        background-image: url("../../images/table/icon_close.svg");
+        background-image: url('../../images/table/icon_close.svg');
         background-size: 40%;
         background-repeat: no-repeat;
         background-position: center;
         background-color: $deep_blue;
-        transition: .2s $material_trans;
+        transition: 0.2s $material_trans;
     }
     &_dropdown {
         position: absolute;
         z-index: 100;
-        top:calc( 9vh - 30px + 85px + 2.5vh + 94px );
+        top: calc(9vh - 30px + 85px + 2.5vh + 94px);
         height: auto;
         max-height: 210px;
         // width: 100%;
-        width: calc( 100% - 5vw - 10px ); 
+        width: calc(100% - 5vw - 10px);
         border: $light_2 1px solid;
         box-sizing: border-box;
         background: $white;
@@ -319,11 +315,11 @@
 .wishlist {
     &.in_table {
         margin-top: 2vh;
-        height: calc( 77vh - 185px);
+        height: calc(77vh - 185px);
     }
     &.in_course {
         margin-top: 1.5vh;
-        height: calc( 82vh - 200px - 2.5vh );
+        height: calc(82vh - 200px - 2.5vh);
     }
     width: 100%;
     @include flex_center_top();
@@ -332,7 +328,7 @@
         width: 100%;
         background: $white;
         overflow-x: hidden;
-        overflow-y: scroll; 
+        overflow-y: scroll;
         border: $light_2 1px solid;
         @include box_shadow_1();
         @include box_shadow_1_hover();
@@ -347,7 +343,7 @@
             // cursor: not-allowed;
             cursor: default;
             &:hover {
-                box-shadow: 0 0 14px 0 rgba(0,0,0,0.06) !important;
+                box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.06) !important;
             }
             &::before {
                 position: absolute;
@@ -392,7 +388,7 @@
             background-color: white;
             border: $light_2 5px solid;
             margin-bottom: 20px;
-            transition: .3s $material_trans;
+            transition: 0.3s $material_trans;
             &:hover {
                 color: $deep_blue;
                 border-color: $deep_blue;
@@ -405,7 +401,7 @@
     &.locked {
         cursor: default;
         &:hover {
-            box-shadow: 0 0 14px 0 rgba(0,0,0,0.10) !important;
+            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.1) !important;
         }
         .class_table_cont_cell.class_cell {
             &:hover {
@@ -423,26 +419,27 @@
             &:active {
                 opacity: 1 !important;
             }
-            &.occupied, &.occupied.other {
+            &.occupied,
+            &.occupied.other {
                 background: $light_1 !important;
                 cursor: default !important;
                 &:hover {
                     border-top: $default 2px solid;
                 }
                 &.A9:hover {
-                    border-top: $red 2px solid ;
+                    border-top: $red 2px solid;
                 }
                 &.A6:hover {
-                    border-top: $blue 2px solid ;
+                    border-top: $blue 2px solid;
                 }
                 &.A7 {
-                    border-top: $pink 2px solid ;
+                    border-top: $pink 2px solid;
                 }
                 &.A1 {
-                    border-top: $green 2px solid ;
+                    border-top: $green 2px solid;
                 }
                 &.A2 {
-                    border-top: $deep_blue 2px solid ;
+                    border-top: $deep_blue 2px solid;
                 }
                 .class_table_cont_cell_title {
                     opacity: 1 !important;
@@ -467,7 +464,7 @@
         &_cell {
             @include flex_center();
             height: 100%;
-            width: calc( (100% - 70px) / 5);
+            width: calc((100% - 70px) / 5);
             border: $light_2 1px solid;
             background: $light_1;
             &.left {
@@ -502,23 +499,23 @@
         }
         &_row {
             height: 100%;
-            width: calc( (100% - 70px) / 5);
+            width: calc((100% - 70px) / 5);
             &.left {
                 width: 70px;
             }
             &.right_full {
                 display: flex;
                 flex-direction: row;
-                flex-wrap: wrap;        // ayy
+                flex-wrap: wrap; // ayy
                 // padding: 0 0 4px 4px;
-                width: calc( 100% - 70px );
+                width: calc(100% - 70px);
                 background: $light_1;
             }
         }
         &_cell {
             @include flex_center_top();
             position: relative;
-            height: calc( (82vh - 44px) / 10);
+            height: calc((82vh - 44px) / 10);
             min-height: 50px;
             width: 100%;
             border: $light_2 1px solid;
@@ -557,11 +554,11 @@
             }
             &.other {
                 @include flex_center_top();
-                position: relative;     // ayy
-                height: calc( ((82vh - 44px) / 10 ) );
+                position: relative; // ayy
+                height: calc(((82vh - 44px) / 10));
                 // height: calc( ((82vh - 44px) / 10 ) - 6px );
                 min-height: 50px;
-                width: calc( (100%/5) );
+                width: calc((100% / 5));
                 // width: calc( (100%/5) - 4px );
                 border: $light_2 1px solid;
                 padding: 0 2%;
@@ -599,7 +596,7 @@
                     &::before {
                         position: relative;
                         display: inline-block;
-                        content: "";
+                        content: '';
                         margin-left: 0px;
                         margin-right: 4px;
                         margin-bottom: 1px;
@@ -619,31 +616,31 @@
                     }
                 }
                 &.A9 {
-                    border-top: $red 2px solid ;
+                    border-top: $red 2px solid;
                     .class_table_cont_cell_id::before {
                         background: $red;
                     }
                 }
                 &.A6 {
-                    border-top: $blue 2px solid ;
+                    border-top: $blue 2px solid;
                     .class_table_cont_cell_id::before {
                         background: $blue;
                     }
                 }
                 &.A7 {
-                    border-top: $pink 2px solid ;
+                    border-top: $pink 2px solid;
                     .class_table_cont_cell_id::before {
                         background: $pink;
                     }
                 }
                 &.A1 {
-                    border-top: $green 2px solid ;
+                    border-top: $green 2px solid;
                     .class_table_cont_cell_id::before {
                         background: $green;
                     }
                 }
                 &.A2 {
-                    border-top: $deep_blue 2px solid ;
+                    border-top: $deep_blue 2px solid;
                     .class_table_cont_cell_id::before {
                         background: $deep_blue;
                     }
@@ -654,8 +651,8 @@
                 .class_table_cont_cell_button {
                     cursor: pointer;
                     opacity: 1;
-                    transition: .2s $material_trans;
-                    background-image: url("../../images/table/icon_arrow_left.svg");
+                    transition: 0.2s $material_trans;
+                    background-image: url('../../images/table/icon_arrow_left.svg');
                     background-color: $gray;
                     &:hover {
                         background-color: $dark;
@@ -671,13 +668,15 @@
                 background: $light_2;
                 border: $light_2 1px solid;
                 border-top: $gray 2px solid;
-                .class_table_cont_cell_id, .class_table_cont_cell_title {
+                .class_table_cont_cell_id,
+                .class_table_cont_cell_title {
                     opacity: 1;
                 }
                 .class_table_cont_cell_button {
                     opacity: 1;
-                    transition: opacity .5s $material_trans, background-color .2s $material_trans ;
-                    background-image: url("../../images/table/icon_close.svg");
+                    transition: opacity 0.5s $material_trans,
+                        background-color 0.2s $material_trans;
+                    background-image: url('../../images/table/icon_close.svg');
                     background-size: 8px;
                     &:hover {
                         background-color: $black;
@@ -692,7 +691,7 @@
                 color: $dark;
                 background: $light_2;
                 border-top: $dark 2px solid;
-                transition: background-color .5s $material_trans;
+                transition: background-color 0.5s $material_trans;
                 .class_table_cont_cell_button {
                     opacity: 0;
                 }
@@ -711,10 +710,10 @@
                 color: $warning_red;
                 background: $light_2;
                 border-top: $warning_red 2px solid !important;
-                transition: background-color .5s $material_trans;
+                transition: background-color 0.5s $material_trans;
                 .class_table_cont_cell_button {
-                    transition: .5s $material_trans;
-                    background-image: url("../../images/table/icon_warn.svg");
+                    transition: 0.5s $material_trans;
+                    background-image: url('../../images/table/icon_warn.svg');
                     background-color: $warning_red;
                 }
                 .class_table_cont_cell_id {
