--- a/src/assets/scss/componentes/windows.scss
+++ b/src/assets/scss/componentes/windows.scss
@@ -1,5 +1,4 @@
-
-@import "src/assets/scss/import";
+@import 'src/assets/scss/import';
 
 .window {
     &__background {
@@ -12,7 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: rgba(0,0,0,0.6);
+        background: rgba(0, 0, 0, 0.6);
     }
     &__self {
         display: block;
@@ -58,21 +57,19 @@
                     background: $light_1;
                 }
                 &:active {
-                    filter: brightness( 98% );
+                    filter: brightness(98%);
                 }
             }
         }
     }
-
 }
 
 .report_window {
-  width: 400px;
-  select {
-    width: 100%;
-    padding: 5px 3px;
-    border: 1px solid grey;
-    border-radius: 0px;
-  }
-
+    width: 400px;
+    select {
+        width: 100%;
+        padding: 5px 3px;
+        border: 1px solid grey;
+        border-radius: 0px;
+    }
 }
