--- a/src/assets/scss/public.scss
+++ b/src/assets/scss/public.scss
@@ -1,68 +1,71 @@
-@import "src/assets/scss/import";
+@import 'src/assets/scss/import';
 
 // 基本設定
 
 body {
-  background: $bg_color;
-  overflow: hidden;
+    background: $bg_color;
+    overflow: hidden;
 }
 
 div {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-body, div, p, a, span {
-  // font-family: 'Noto Sans', helvetica, serif, sans-serif, monospace;
-  font-size: 14px;
-  line-height: 150%;
-  color: $black;
-  -moz-user-select: none;
-  -webkit-user-select: none;
+body,
+div,
+p,
+a,
+span {
+    // font-family: 'Noto Sans', helvetica, serif, sans-serif, monospace;
+    font-size: 14px;
+    line-height: 150%;
+    color: $black;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
-
 
 // 字體大小
 
 .text {
-  &_26 {
-    font-size: 20px;
-  }
-  &_24 {
-    font-size: 18px;
-  }
-  &_20 {
-    font-size: 16px;
-  }
-  &_18 {
-    font-size: 15px;
-  }
-  &_16 {
-    font-size: 14px;
-  }
-  &_14 {
-    font-size: 12px;
-  }
-  &_12 {
-    font-size: 10px;
-  }
-  &_dark {
-    color: $dark;
-    opacity: 0.8;
-  }
-  &_white {
-    color: $white;
-  }
-  &_deep_blue {
-    color: $deep_blue;
-  }
-  &_red {
-    color: $red;
-  }
-  &_bold {
-    font-weight: bold;
-  }
+    &_26 {
+        font-size: 20px;
+    }
+    &_24 {
+        font-size: 18px;
+    }
+    &_20 {
+        font-size: 16px;
+    }
+    &_18 {
+        font-size: 15px;
+    }
+    &_16 {
+        font-size: 14px;
+    }
+    &_14 {
+        font-size: 12px;
+    }
+    &_12 {
+        font-size: 10px;
+    }
+    &_dark {
+        color: $dark;
+        opacity: 0.8;
+    }
+    &_white {
+        color: $white;
+    }
+    &_deep_blue {
+        color: $deep_blue;
+    }
+    &_red {
+        color: $red;
+    }
+    &_bold {
+        font-weight: bold;
+    }
 }
