--- a/src/app/pages/course/components/navbar/navbar.component.html
+++ b/src/app/pages/course/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <div id="navbar" class="hub_navbar">
         <div class="hub_navbar__left_area">
-            <a class="hub_navbar__logo" href="/"></a>
+            <a class="hub_navbar__logo" href="/src"></a>
             <input
                 class="hub_navbar__search"
                 type="text"
