--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -3,3 +3,5 @@
 <div style="margin-top: 64px">
     <router-outlet></router-outlet>
 </div>
+<!--寫心得-->
+<!--<app-write-comment></app-write-comment>-->
