refactor: setting proxy

--- a/src/app/pages/course/components/navbar/navbar.component.html
+++ b/src/app/pages/course/components/navbar/navbar.component.html
@@ -10,8 +10,9 @@
             <div class="hub_navbar__search__cancel"></div>
         </div>
         <div class="hub_navbar__right_area">
-            <div>找課程</div>
-            <div>排課表 <span class="wishlist_count"></span></div>
+<!--            <div>找課程</div>-->
+            <a href="/api/user/fblogin">登入</a>
+<!--            <div>排課表 <span class="wishlist_count"></span></div>-->
             <img class="hub_navbar__profile" />
         </div>
     </div>
