--- a/src/app/pages/course/components/course-content/course-content.component.scss
+++ b/src/app/pages/course/components/course-content/course-content.component.scss
@@ -214,9 +214,9 @@ h4 {
     background-image: url('../../../../../assets/images/course/clipboard.svg');
 }
 
-.material-icons {
-    margin: 0px 2px 0px 0px;
-}
+// .material-icons {
+//     margin: 0px 2px 0px 0px;
+// }
 
 .courseUnit {
     margin-top: 30px;
