--- a/src/app/pages/course/components/course-search/course-search.component.html
+++ b/src/app/pages/course/components/course-search/course-search.component.html
@@ -6,9 +6,9 @@
                 <p class="text_18">開課單位</p>
             </div>
             <div class="quick_search_area" style="z-index:300">
-                <input #dpmtFilter class="quick_search_input" id="dpmtFilter" type="text" (input)="searchDept(dpmtFilter.value)"
+                <input #dpmtFilter class="quick_search_input" id="dpmtFilter" type="text" [(ngModel)]="keyword" (input)="searchDept(dpmtFilter.value)"
                     placeholder="選擇「開課單位」" autocomplete="off" />
-                <button class="quick_search_delete" (click)="deleteSearch()"></button>
+                <button class="quick_search_delete" style="display:inline-block" (click)="deleteSearch()"></button>
                 <div class="quick_search_dropdown--course" *ngIf="keyword.replace(' ','') != ''">
                     <p class="quick_search_dropdown--course__no_result text_dark" *ngIf="!dept_dropdown.length">查無此關鍵字結果。
                     </p>
@@ -69,7 +69,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="course_data_end" style="height:1px"></div>
             </div>
         </div>
