refactor: convert course.sass to course.scss

--- a/src/app/pages/course/components/course-search/course-search.component.html
+++ b/src/app/pages/course/components/course-search/course-search.component.html
@@ -34,6 +34,7 @@
             </div>
         </div>
 
+        <app-wish-list></app-wish-list>
     </div>
     <!-- <div class="flex-container dark_screen mobile_only" id="courseDarkScreen" v-if="mobile_status == 'drop'"></div> -->
     <div class="flex-container courseList__sideList">
