--- a/src/app/pages/course/components/course-content/course-content.component.scss
+++ b/src/app/pages/course/components/course-content/course-content.component.scss
@@ -108,11 +108,11 @@ h4 {
 .content_nextpage {
     display: flex;
     position: absolute;
-    width: 15px;
     justify-content: space-between;
     align-items: center;
-    padding: 0 3vw;
-    top: 50%;
+    z-index: -1;
+    padding: 0;
+    height: 100%;
     width: 100%;
 }
 
