1. fix: Number -> number 2. 命名請用駝峰

--- a/src/app/pages/course/components/wish-list/wish-list.component.html
+++ b/src/app/pages/course/components/wish-list/wish-list.component.html
@@ -16,8 +16,8 @@
             <div class="list_course_item_right"> </div>
         </div>
     </div>
-    <div class="quick_search_custom quick_search_custom--btn" (click)="opentabletab()"><img
-            src="../../../../../assets/images/course/arrange.svg" />
+    <div class="quick_search_custom quick_search_custom--btn" (click)="openTableTab()"><img
+            src="../../../../../assets/images/course/arrange.svg"/>
         <p>加入完成，開始安排課表！</p>
     </div>
 </div>
