--- a/src/app/pages/course/components/course-content/course-content.component.html
+++ b/src/app/pages/course/components/course-content/course-content.component.html
@@ -19,8 +19,8 @@
 
                 <!-- 應改成能判斷加入或移除 -->
                 <div class="flex-container icon-span desktop_only" (click)="setWishlist(courseData.id)">
-                    <div *ngIf="!wishList.includes(courseData.id)"><span class="content-icon add_wishlist"></span><span>加入願望清單</span></div>
-                    <div *ngIf="wishList.includes(courseData.id)"><span class="content-icon already_add_wishlist"></span><span style="color: #f35a5a">移除願望清單</span></div>
+                    <div *ngIf="!this.inWishList"><span class="content-icon add_wishlist"></span><span>加入願望清單</span></div>
+                    <div *ngIf="this.inWishList"><span class="content-icon already_add_wishlist"></span><span style="color: #f35a5a">移除願望清單</span></div>
                 </div>
 
                 <!-- <div class="flex-container icon-span">
